# DataAnalyzerCOVID

./: README.md  gui.py  preprocessing_optimized.py  pyproject.toml
backupFiles/: backup_preproc.py  preprocessing_v1.py
data/: index_reference.txt  preprocessed_index.txt  raw_dataset2.csv
data/testing_data/: dataQ1Compare.csv  dataQ2Compare.csv  dataQ3and4Compare.csv
