[tool.poetry]
name = "projectl01"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.11.1"
pandas = "^1.2.3"
pysimplegui = "^4.38.0"
pysimpleguiweb = "^0.39.0"
PyPDF2 = "^1.26.0"
tkcalendar = "^1.6.1"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
